--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </div>
 
     <!-- Kontrol manual -->
-    <button id="prev">Prev</button>
-    <button id="next">Next</button>
+    <button id="prev"> Prev </button>
+    <button id="next"> Next. </button>
   </div>
 
   <audio id="musik" src="m.mp4" autoplay loop></audio>
